Added Bootstrap and customizations

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,6 @@
-@import "bootstrap"; 
+$body-bg: #16a085;
+$navbar-inverse-bg: #1abc9c;
+$navbar-inverse-link-color: white;
+$brand-primary: #f39c12;
+$jumbotron-bg: #ecf0f1;
+@import 'bootstrap';
