Customize bootstrap variables

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -4,3 +4,7 @@ $navbar-inverse-link-color: white;
 $brand-primary: #f39c12;
 $jumbotron-bg: #ecf0f1;
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
